--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.3.1
 dj-database-url==0.5.0
-Django==3.1.4
+Django==3.1.5
+django-admin-relation-links==0.2.5
 django-cors-headers==3.6.0
+django-filter==2.4.0
 django-heroku==0.3.1
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
 gunicorn==20.0.4
+Markdown==3.3.3
 psycopg2==2.8.6
+PyJWT==2.0.1
 pytz==2020.5
 sqlparse==0.4.1
 whitenoise==5.2.0
