--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+argcomplete==2.0.0
 asgiref==3.3.1
+click==8.1.3
+colorama==0.4.6
 dj-database-url==0.5.0
 Django==3.1.5
 django-admin-relation-links==0.2.5
@@ -8,8 +11,13 @@ django-heroku==0.3.1
 djangorestframework==3.12.2
 gunicorn==20.0.4
 Markdown==3.3.3
-psycopg2==2.8.6
+packaging==22.0
+pipx==1.1.0
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
 PyJWT==2.0.1
+python-dotenv==0.21.0
 pytz==2020.5
 sqlparse==0.4.1
+userpath==1.8.0
 whitenoise==5.2.0
