--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Django==3.1.5
 django-admin-relation-links==0.2.5
 django-cors-headers==3.6.0
 django-filter==2.4.0
-# django-heroku==0.3.1
+django-heroku==0.3.1
 djangorestframework==3.12.2
 gunicorn==20.0.4
 Markdown==3.3.3
